{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 11,
  "lineage": "e9e48f23-1a33-0b02-6d07-cbdb3d359e7e",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:internet-gateway/igw-08a792a1cb70d9336",
            "id": "igw-08a792a1cb70d9336",
            "owner_id": "121935933701",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-igw",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-igw",
              "Project": "reflectfeedback"
            },
            "vpc_id": "vpc-06e998c18fa497e35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:route-table/rtb-09648c62ba6126b3d",
            "id": "rtb-09648c62ba6126b3d",
            "owner_id": "121935933701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a792a1cb70d9336",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-rt",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-rt",
              "Project": "reflectfeedback"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e998c18fa497e35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_internet_gateway.main",
            "module.rds.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d0d5acad8940e8e",
            "route_table_id": "rtb-09648c62ba6126b3d",
            "subnet_id": "subnet-014a81769e9113873"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_internet_gateway.main",
            "module.rds.aws_route_table.main",
            "module.rds.aws_subnet.private",
            "module.rds.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06627e0458082adf1",
            "route_table_id": "rtb-09648c62ba6126b3d",
            "subnet_id": "subnet-0f9357086c101db42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_internet_gateway.main",
            "module.rds.aws_route_table.main",
            "module.rds.aws_subnet.private",
            "module.rds.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:security-group/sg-0f55965f2cab031ef",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f55965f2cab031ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL access",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "reflectfeedback-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "121935933701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-rds-sg",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-rds-sg",
              "Project": "reflectfeedback"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e998c18fa497e35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:subnet/subnet-014a81769e9113873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014a81769e9113873",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121935933701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-private-subnet-1",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-private-subnet-1",
              "Project": "reflectfeedback"
            },
            "vpc_id": "vpc-06e998c18fa497e35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:subnet/subnet-0f9357086c101db42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9357086c101db42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121935933701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-private-subnet-2",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-private-subnet-2",
              "Project": "reflectfeedback"
            },
            "vpc_id": "vpc-06e998c18fa497e35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rds.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121935933701:vpc/vpc-06e998c18fa497e35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea99c6d4461887eb",
            "default_route_table_id": "rtb-0643ebb138ee8b091",
            "default_security_group_id": "sg-014c161c66d6909cd",
            "dhcp_options_id": "dopt-05715829ffceed414",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e998c18fa497e35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0643ebb138ee8b091",
            "owner_id": "121935933701",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-vpc",
              "Project": "reflectfeedback"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "reflectfeedback-prod-vpc",
              "Project": "reflectfeedback"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}